# throttle-gate

./: .gitignore  README.md  docker-compose.distributed.yml  docker-compose.yml
adapters/: README.md
adapters/cloudflare/: README.md  worker.js  wrangler.toml
adapters/envoy/: README.md  envoy.yaml
adapters/express/: example_app.js  throttleGate.js
adapters/fastapi/: example_app.py  throttle_gate.py
adapters/nginx/: README.md  throttle-gate.conf
backend/: Dockerfile  pyproject.toml
backend/app/: alerts.py  auth.py  config.py  generator.py  history.py  main.py  metrics.py  policy.py  ratelimit_headers.py  replay.py  sse.py  stats.py
backend/app/limiters/: __init__.py  base.py  concurrency.py  fixed_window.py  gcra.py  leaky_bucket.py  sliding_counter.py  sliding_log.py  token_bucket.py
backend/app/limiters/scripts/: concurrency.lua  fixed_window.lua  gcra.lua  leaky_bucket.lua  sliding_counter.lua  sliding_log.lua  token_bucket.lua
backend/app/tests/: test_concurrency.py
deploy/sidecar/: README.md  app.Dockerfile  docker-compose.yml
docs/: throttle-gate_ARCHITECTURE.md  throttle-gate_DEVPLAN.md  throttle-gate_PRD.md  throttle-gate_ROADMAP.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: screenshot.mjs
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: control.ts  stream.ts
frontend/src/components/: ControlPanel.tsx  DistributedPanel.tsx  ObservabilityDrawer.tsx  PolicyEditor.tsx  ReplayDrawer.tsx  TopKeys.tsx  (+4 more)
proxy/: nginx.conf
scripts/: distributed_demo.py  live_demo.py
(+11 files in other folders)
